--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -5,8 +5,8 @@ map $http_upgrade $connection_upgrade {
 
 server {
   listen 80;
-  server_name n8n.skynet.internal;
-  return 301 example.com;
+  server_name example.com;
+  return 301 https://$host$request_uri;
 }
 
 server {
@@ -55,4 +55,5 @@ server {
     proxy_read_timeout 600s;
     proxy_send_timeout 600s;
   }
+
 }
